<resources>
    <string name="app_name">Notes_project</string>
    <string name="bold">Жирный</string>
    <string name="italic">Курсив</string>
    <string name="thin">Тонкий</string>
    <string name="normal">Стандартный</string>
    <string name="extra_light">Супер-тонкий</string>
    <string name="tex_size">Размер текста</string>
    <string-array name="font_sizes">
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>